# chin-chon-lin

./: .gdb_history.calc_scores  .gdb_history.check_extra_cards  .gdb_history.determine_missing_cards  .gdb_history.finish  .gdb_history.get_game_combos  .gdb_history.get_ncard_to_play  .gdb_history.get_sub_stair  .gdb_history.parse_test_file  .gdb_history.rearrange_cards  .gdb_history.set_current_group  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  README.md  TODO  aclocal.m4  configure  configure.ac
data/: Makefile.am  Makefile.in  org.gtk.chin-chon-lin.desktop  org.gtk.chin-chon-lin.gschema.xml
data/help/: Makefile.am  Makefile.in
data/help/C/: Makefile.am  Makefile.in  rules.txt
data/help/es_AR/: Makefile.am  Makefile.in  rules.txt  rules.xml
data/icons/: Makefile.am  Makefile.in
data/tiles/: Makefile.am  Makefile.in
data/ui/: Makefile.am  Makefile.in  main-window.ui  preferences.ui  scores.ui  ui.xml
m4/: ChangeLog
po/: ChangeLog  LINGUAS  POTFILES.in  chin-chon-lin.pot  en@boldquot.po  en@quot.po  es_AR.po
src/: Board.cc  Board.h  Card.cc  Card.h  Cmdline.cc  Cmdline.h  Deck.cc  Deck.h  Logic.cc  Logic.h  Makefile.am  Makefile.in  Menu.cc  Menu.h  Player.cc  Player.h  Stack.cc  Stack.h  Tile.cc  Tile.h  UserInterface.cc  UserInterface.h  main.cc
test/: bot-input-0-stair-stair.txt  bot-input-1-stair-group.txt  bot-input-2-group-stair.txt  bot-input-3-group-group.txt  bot-input-4-common-card.txt  bot-input-5-two-stairs.txt  bot-input-6-big-stairway.txt  input-0-stair-stair.txt  input-1-stair-group.txt  input-2-group-stair.txt  input-3-group-group.txt  input-4-common-card.txt  input-5-two-stairs.txt  input-6-big-stairway.txt
